# pydocspell

./: .gitignore  pyproject.toml  runtests.sh  scent.py
pydocspell/: __init__.py  apiwrapper.py  metadata.py
pydocspell/util/: unique_ids.py
tests/: test_apiwrapper.py  test_metadata.py  test_util.py
